--- a/latitude/en.lproj/MainStoryboard.storyboard
+++ b/latitude/en.lproj/MainStoryboard.storyboard
@@ -11,37 +11,109 @@
                     <view key="view" contentMode="scaleToFill" id="3">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="GIn-aF-X8f" kind="modal" identifier="MoveToRegister" modalTransitionStyle="coverVertical" id="5Qa-xo-rfO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-274" y="-83"/>
+        </scene>
+        <!--Login View Controller - Register-->
+        <scene sceneID="6tE-vm-yjD">
+            <objects>
+                <viewController title="Register" id="GIn-aF-X8f" customClass="LoginViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Qdm-aQ-6Mn">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rdW-mP-mq4">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QR3-1a-V1r">
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Button">
+                                <state key="normal">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="GlobalButtonTouched:" destination="GIn-aF-X8f" eventType="touchUpInside" id="toJ-gY-M7t"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jx2-rT-ggL">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="7j8-Xy-vOH"/>
+                                    <constraint firstAttribute="width" constant="117" id="Sm0-dq-wYD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="CourierNewPS-BoldItalicMT" family="Courier New" pointSize="26"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mWh-ww-sML">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="Mcw-wY-fFN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="next"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7yl-BQ-cuq">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="1Ub-bm-Ppt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="go" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AY2-D6-F5e">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="Spg-HU-JTP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Login" backgroundImage="tableViewBackground.png">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="LoginClicked:" destination="GIn-aF-X8f" eventType="touchUpInside" id="mAx-3T-8ZS"/>
+                                </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="rdW-mP-mq4" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="7yk-gl-WtY"/>
-                            <constraint firstAttribute="bottom" secondItem="rdW-mP-mq4" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="jJi-Al-1gK"/>
+                            <constraint firstItem="Jx2-rT-ggL" firstAttribute="centerX" secondItem="mWh-ww-sML" secondAttribute="centerX" type="default" id="1tB-eY-AhN"/>
+                            <constraint firstItem="QR3-1a-V1r" firstAttribute="bottom" secondItem="Qdm-aQ-6Mn" secondAttribute="bottom" type="default" id="4nx-Y5-DlN"/>
+                            <constraint firstItem="mWh-ww-sML" firstAttribute="top" secondItem="Qdm-aQ-6Mn" secondAttribute="top" constant="159" id="69n-3g-5qe"/>
+                            <constraint firstItem="QR3-1a-V1r" firstAttribute="leading" secondItem="Qdm-aQ-6Mn" secondAttribute="leading" type="default" id="8Oo-aL-Lnv"/>
+                            <constraint firstItem="7yl-BQ-cuq" firstAttribute="leading" secondItem="Qdm-aQ-6Mn" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="AAl-Dn-tEk"/>
+                            <constraint firstAttribute="trailing" secondItem="mWh-ww-sML" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="EdA-6P-qyB"/>
+                            <constraint firstItem="Jx2-rT-ggL" firstAttribute="top" secondItem="Qdm-aQ-6Mn" secondAttribute="top" constant="71" id="FqV-J3-kN8"/>
+                            <constraint firstItem="QR3-1a-V1r" firstAttribute="top" secondItem="Qdm-aQ-6Mn" secondAttribute="top" type="default" id="SAK-l5-tUk"/>
+                            <constraint firstItem="QR3-1a-V1r" firstAttribute="trailing" secondItem="Qdm-aQ-6Mn" secondAttribute="trailing" type="default" id="TsC-rL-VvB"/>
+                            <constraint firstAttribute="trailing" secondItem="AY2-D6-F5e" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="dn7-3N-YUZ"/>
+                            <constraint firstItem="AY2-D6-F5e" firstAttribute="top" secondItem="Qdm-aQ-6Mn" secondAttribute="top" constant="267" id="h6U-qs-fVl"/>
+                            <constraint firstItem="7yl-BQ-cuq" firstAttribute="top" secondItem="Qdm-aQ-6Mn" secondAttribute="top" constant="196" id="kWN-ox-OSD"/>
+                            <constraint firstAttribute="trailing" secondItem="7yl-BQ-cuq" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="lGk-Tx-V1t"/>
+                            <constraint firstItem="AY2-D6-F5e" firstAttribute="leading" secondItem="Qdm-aQ-6Mn" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="ujo-6c-3DN"/>
+                            <constraint firstItem="mWh-ww-sML" firstAttribute="leading" secondItem="Qdm-aQ-6Mn" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="zvj-zW-iSW"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="passwordTextField" destination="7yl-BQ-cuq" id="mH9-5v-3tz"/>
+                        <outlet property="userNameTextField" destination="mWh-ww-sML" id="T3p-pA-BOt"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SAk-Ny-NyM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-274" y="592"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-        </class>
-    </classes>
+    <resources>
+        <image name="tableViewBackground.png" width="640" height="2"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
